# tau-api-testing-with-python

./: README.md  pyproject.toml  requirements.txt
bookstore/: account_service.py  models.py
notebooks/chapter1/: challenge_python-requests.ipynb  solution_python-requests.ipynb
notebooks/chapter2/: challenge_using_pydantic.ipynb  solution_using_pydantic.ipynb
notebooks/chapter3/: challenge_post-requests.ipynb  solution_post-requests.ipynb
tests/: test_accounts.py
